@@ -1,2 +1,3 @@
 galette/* usr/share/galette/
 debian/apache/galette.conf etc/apache2/conf.d/
+debian/behavior.inc.php etc/galette/
